--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.3",
-        "symfony/console": "^5.0"
+        "symfony/console": "^5.0",
+        "nesbot/carbon": "^2.27"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4"
