--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "nesbot/carbon": "^2.27"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4"
+        "phpunit/phpunit": "^8.4",
+        "phpunit/php-invoker": "^2.0"
     },
     "autoload": {
         "psr-4": {
