--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
-        "phpunit/php-invoker": "^2.0"
+        "phpunit/php-invoker": "^2.0",
+        "mikey179/vfsstream": "^1.6"
     },
     "autoload": {
         "psr-4": {
