--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "MikkoTest\\": "tests/unit/"
+            "MikkoTest\\": "tests/unit/",
+            "MikkoTest\\Tests\\Integration\\": "tests/integration"
         }
     }
 }
